--- a/content/lia2/panorama/styles/play.css
+++ b/content/lia2/panorama/styles/play.css
@@ -3894,7 +3894,10 @@ DOTAPlay.SectionVisible_CoachesChallenge #CoachesChallengeSectionContent
 	visibility: visible;
 }
 
-#CoachRatingContainer
+#CoachRatingContainer,
+#CoachRatingContainer2,
+#CoachRatingContainer3,
+#CoachRatingContainerEnd
 {
 	flow-children: down;
 }
