--- a/content/lia2/panorama/styles/custom_game/hero_picking_player.css
+++ b/content/lia2/panorama/styles/custom_game/hero_picking_player.css
@@ -365,7 +365,7 @@ DOTAHudPreGame.StartPregameIntro #NameContainer
 }
 
 
-.PlayerInControl ##NameContainer > Label
+.PlayerInControl #NameContainer > Label
 {
 	color: #dddddd;
 }
